--- a/src/form/form.html
+++ b/src/form/form.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Blog</title>
     <link
       href="https://fonts.googleapis.com/css?family=Muli:300,400,700&display=swap"
       rel="stylesheet"
     />
-    <title>Blog.js</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <a class="header-brand" href="./index.html">Blog.js</a>
+        <a class="header-brand" href="./index.html">Blog</a>
         <div class="header-menu">
           <ul>
             <li>
@@ -26,7 +26,7 @@
             </li>
           </ul>
           <div class="header-menu-icon">
-            <i class="fas fa-bars"></i>
+            <i class="fa-solid fa-bars"></i>
           </div>
         </div>
       </header>
@@ -42,7 +42,7 @@
             <input type="text" name="img" />
           </div>
           <div class="form-group">
-            <label>Categorie</label>
+            <label>Catégorie</label>
             <input type="text" name="category" />
           </div>
           <div class="form-group">
@@ -55,8 +55,8 @@
           </div>
           <ul class="text-error" id="errors"></ul>
           <div class="form-btn-container">
-            <button class="btn btn-secondary">Annuler</button>
-            <button class="btn btn-primary">Sauvegarder</button>
+            <button type="button" class="btn btn-secondary">Annuler</button>
+            <button type="submit" class="btn btn-primary">Sauvegarder</button>
           </div>
         </form>
       </div>
